Configuration et models controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=projet_android_AL
+
+# Data source
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ma_base
+spring.datasource.username=mon_user
+spring.datasource.password=mot_de_passe
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.open-in-view=false
+
+# Jackson TZ
+spring.jackson.time-zone=Europe/Paris
+
+# HikariCP settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.pool-name=HikariPool
