Création route register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,12 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.open-in-view=false
 
-# Jackson TZ
+# Jackson
 spring.jackson.time-zone=Europe/Paris
+spring.jackson.deserialization.fail-on-unknown-properties=true
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
 
 # HikariCP settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
