Utiliser les environnements dans le application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=projet_android_AL
 
 # Data source
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ma_base
-spring.datasource.username=mon_user
-spring.datasource.password=mot_de_passe
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:ma_base}
+spring.datasource.username=${POSTGRES_USER:mon_user}
+spring.datasource.password=${POSTGRES_PASSWORD:mot_de_passe}
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
