--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.pool-name=HikariPool
+
+# Security
+jwt.secret=${JWT_SECRET:default_secret_key_change_me}
+jwt.access-expiration=PT15M
+jwt.refresh-expiration=P30D
