utilisation spring dot env fix jwtServices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,9 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.pool-name=HikariPool
 
 # Security
-jwt.secret=${JWT_SECRET:default_secret_key_change_me}
+jwt.secret=${SECRET_KEY:yvynLW3YoHrRIDrbSyACFn7WndbnJlAVyh0NM}
 jwt.access-expiration=PT15M
 jwt.refresh-expiration=P30D
+
+# env
+spring.config.import=optional:dotenv:.env
