--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.datasource.hikari.pool-name=HikariPool
 
 # Security
 jwt.secret=${SECRET_KEY:yvynLW3YoHrRIDrbSyACFn7WndbnJlAVyh0NM}
-jwt.access-expiration=PT15M
+jwt.access-expiration=P90D
 jwt.refresh-expiration=P30D
 
 # env
