fix(config): Change JPA Hibernate ddl-auto setting from create to update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=${POSTGRES_USER:mon_user}
 spring.datasource.password=${POSTGRES_PASSWORD:mot_de_passe}
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.default_schema=public
